--- a/src/app/admin/student-data/student-data.component.html
+++ b/src/app/admin/student-data/student-data.component.html
@@ -1,4 +1,5 @@
 <ng-template #elseBlock>
+<div class="col-md-5 mx-auto">  
   <table class="table table-hover">
     <thead>
       <tr>
@@ -17,6 +18,7 @@
       </tr>
     </tbody>
   </table>
+</div>  
 </ng-template>  
 <div *ngIf="isEmpty else elseBlock" class="col-md-5 mx-auto">
     <p class="text-grey text-center">No Student Assigned Yet</p>
