--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -9,9 +9,9 @@
     </div>
     <div class="col-md-5 float-right">
       <div class="row">
-        <div class="col-md-3 mx-auto user float-right">
+        <!-- div class="col-md-3 mx-auto user float-right">
             <span class="fa fa-user fa-5x"></span>
-        </div>
+        </div -->
         <div>
           <span class="font-weight-bold text-capitalize text-justify">Name:&nbsp;{{activeStudent.name}}</span><br>
           <span class="font-weight-bold text-justify">Role:&nbsp;{{activeStudent.role}}</span>
@@ -20,6 +20,6 @@
     </div>
   </div>  
 </div>
-<div class="col-md-10 mx-auto">
+<div class="col-md-10 col-sm-10 mx-auto">
     <router-outlet></router-outlet>
  </div> 
